Fixed dark mode color

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,8 +21,8 @@
     --background: #0a0a0a;
     --foreground: #ededed;
     --icon-color: #ededed;
-    --accent: #FF845A;
-    --accent-hover: #FF845A;
+    --accent: #ff5a5a;
+    --accent-hover: #ff5a5a;
     --text-muted: #BFBFBF;
   }
 }
